# typst-go

./: README.md  go.mod  libs.go  main.typ  typst.go  typst.h
example/compile_to_pdf/: main.go
example/compile_to_png/: main.go
example/compile_to_svg/: main.go
scripts/: generate.sh
typst-rs/: Cargo.toml  uniffi.toml
typst-rs/src/: lib.rs  typst.udl  uniffi_bindgen_go.rs  world.rs
